--- a/estilo.css
+++ b/estilo.css
@@ -2,17 +2,17 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #663399; /* cor cinza claro*/
+    background-color: #663399;
 }
 img#eddie {
-    width: 140px;
+    width: 180px;
     position: absolute;
     right: 0px;
     top: 0px;
 }
 
 img#eddie2 {
-    width: 140px;
+    width: 180px;
     position: absolute;
     left: 0px;
     top: 0px;
@@ -25,23 +25,21 @@ header {
 
 hgroup {
     text-align: center;
-    margin-bottom: 15px;
+    margin-bottom: 25px;
     padding: 1px;
-
-    font-family: Algerian;
+    font-family: Times;
     font-size: 18pt;
-
-
 }
 
 nav {
     position: absolute;
     left: 30px;
     background-color: #E6E6FA;
-    display: block;
-    margin-top: 30px;
+
+    margin-top: 60px;
     margin-left: 20px;
     margin-right: 20px;
+    margin-bottom: 20px;
     box-shadow: 1px 1px 4px black;
 }
 
@@ -61,73 +59,93 @@ li {
     text-align: center;
     font-family: Arial;
     font-size: 13pt;
+
     font-weight: bolder;
     transition: background-color 0.5s;
-
-
-
 }
 
 li:hover {
-    background-color: #606060; /* cinza escuro */
-}
-
-div#div1 {
+    background-color: #D8BFD8;
 
 }
 
 div#div2 {
-    font-family: Bahnschrift;
+    font-family: Didot;
     background-color: #E6E6FA;
     margin-left: 600px;
-    margin-right: 200px;
+    margin-right: 150px;
     box-shadow: 1px 1px 4px black;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     padding: 20px;
-
 }
 
 section#section2 {
-    font-family: Bahnschrift;
-    font-size: 15pt;
+    font-family: Didot;
+    font-size: 18pt;
     margin: 0px;
     padding: 10px;
     text-align: left;
-}
-
-div#div3 {
-    background-color: #;
-    margin-left: 600px;
-    margin-right: 200px;
-
-    padding: 20px;
-    box-shadow: 1px 1px 1px black;
 }
 
 section#section3 {
-    font-family: Bahnschrift;
-    font-size: 15pt;
+    font-family: Didot;
+    font-size: 18pt;
     margin: 0px;
     padding: 10px;
     text-align: left;
 }
 
-div#eu {
-    margin-left: 260px;
-
-    padding: 0px;
-}
-
 img#nathan {
-    width: 400px;
-    height: 600px;
+    width: 300px;
+    height: 500px;
+    position: absolute;
+    right: 220px;
+    top: 390px;
 
 }
+
+img.primeiroblob {
+    position: absolute;
+    right: 250px;
+    top: 360px;
+}
+
+img.segundoblob {
+    position: absolute;
+    right: 250px;
+    top: 825px;
+}
+
+img.terceiroblob {
+    position: absolute;
+    right: 250px;
+    top: 1250px;
+}
+
+img.desenvolvimentos {
+    position: absolute;
+    right: 200px;
+    top: 650px;
+}
+
+img.desenvolventoa {
+    position: absolute;
+    right: 200px;
+    top: 650px;
+}
+
+img.analistaa {
+    position: absolute;
+    right: 200px;
+    top: 750px;
+}
+
+
 
 footer {
     background-color: #FF00FF;
     box-shadow: 1px 1px 1px black;
     padding: 1px;
     text-align: center;
-    margin-top: 110px;
+    margin-top: 20px;
 }
